--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches: [ main ]
   pull_request:
-    branches: [ main ]
 
 jobs:
   test:
@@ -20,21 +19,20 @@ jobs:
         ports:
           - 5432:5432
         options: >-
-          --health-cmd="pg_isready -U postgres"
+          --health-cmd="pg_isready -U postgres -d ordersdb"
           --health-interval=10s
           --health-timeout=5s
           --health-retries=5
 
     env:
       DATABASE_URL: postgresql+psycopg2://postgres:postgres@localhost:5432/ordersdb
-      JWT_SECRET: test-secret
-      APP_NAME: Order Management API
+      JWT_SECRET_KEY: testsecret
+      ACCESS_TOKEN_EXPIRE_MINUTES: 60
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
@@ -42,6 +40,14 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install pytest alembic
+
+      - name: Wait for DB
+        run: |
+          until pg_isready -h localhost -p 5432 -U postgres; do sleep 1; done
+
+      - name: Run migrations
+        run: alembic upgrade head
 
       - name: Run tests
         run: pytest -q
