fix: set DATABASE_URL and JWT_SECRET for GitHub Actions CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,4 @@
+
 name: CI
 
 on:
@@ -22,12 +23,12 @@ jobs:
           --health-cmd="pg_isready -U postgres -d ordersdb"
           --health-interval=5s
           --health-timeout=5s
-          --health-retries=5
+          --health-retries=10
 
     env:
       DATABASE_URL: postgresql+psycopg2://postgres:postgres@localhost:5432/ordersdb
-      JWT_SECRET_KEY: testsecret
-      ACCESS_TOKEN_EXPIRE_MINUTES: 60
+      JWT_SECRET: testsecret
+      ACCESS_TOKEN_EXPIRE_MINUTES: "60"
 
     steps:
       - uses: actions/checkout@v4
@@ -42,11 +43,7 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run migrations
-        run: alembic upgrade head
+        run: python -m alembic upgrade head
 
       - name: Run tests
-      env:
-        JWT_SECRET: testsecret
-        DATABASE_URL: postgresql+psycopg2://postgres:postgres@localhost:5432/ordersdb
-        ACCESS_TOKEN_EXPIRE_MINUTES: "60"
-      run: pytest -q
+        run: pytest -q
